$Id$

v0.91.2		17-Feb-2008

	mbselib.h:
		Added stream scanning for F-Prot.

	mbsetup:
		Fixed chapter numbering in the ascii sitedoc.

	script:
		Fixed hatch script to send File line. Note: you must manually
		install hatch.new to hatch in the bin directory and set the
		password again, this script will not automatic install.


v0.95.1		07-Jan-2008 - 17-Feb-2008.

	upgrade:
		Start mbsetup and exit. If you have a clamd running on some
		server (or bbs machine), you can switch to use stream
		scanning. See the manual for details.

	mbselib.h:
		Added file virscan function.
		Added stream scanning for ClamAV, scanning is 10 times faster
		compared to the commandline scanner.
		Don't log errors if execute unzip returned error 11.

	mbtask:
		Added last changes for MIB counters.

	mbfido:
		Changed error message on the news gate.
		Switched to virus scanner from library.

	mbfile:
		Switched to virus scanner from library.

	mbsebbs:
		Added MIB counters.
		Switched to virus scanner from library.

	mbsetup:
		Added support for TCP stream scanners.

	script:
		Added support for Zenwalk.


v0.95.0		25-Nov-2007 - 07-Jan-2008

	mbcico:
		The maximum speed to show to the other end is now 4294976295.

	mbsetup:
		Changed the maximum linespeed to display for TCP/IP sessions to
		4294976295. Numbers above 2147483647 might display on remote
		systems as negative numbers.



v0.92.0		08-Oct-2006 - 16-Oct-2007

	general:
                With this version de default internal character encoding is
                UTF-8. BBS users who have a UTF-8 terminal can use the bbs in
                UTF-8 mode and should have no troubles at all reading and
                writing messages in several language encodings.
		Fixed building on FreeBSD, tested on 5.3 and 6.2.
		Added support to link to the GeoIP library. If it's present on
		your system, mbcico, mbsebbs, mbnewusr and mbnntp will log the
		country from which the connection is made.